--- a/rules/nagios_trigger.yaml
+++ b/rules/nagios_trigger.yaml
@@ -1,8 +1,8 @@
 --
-pack: gc_st_risk-factor
-ref: gc_st_risk-factor.nagios_trigger
+pack: gc_risk_factor
+ref: gc_risk_factor.nagios_trigger
 name: nagios_trigger
-uid: rule:gc_st_risk-factor:nagios_trigger
+uid: rule:gc_risk_factor:nagios_trigger
 tags: []
 type:
   ref: standard
@@ -27,7 +27,7 @@ criteria:
     pattern: "cross_margin_risk"
     type: eq
 action:
-  ref: gc_st_risk-factor.network_recovery
+  ref: gc_risk_factor.network_recovery
   description: try to auto remediate network down device
   parameters:
     down_device: "{{ trigger.host }}"
