--- a/actions/remediate_risk.yaml
+++ b/actions/remediate_risk.yaml
@@ -1,6 +1,6 @@
 ---
 name: remediate_risk
-pack: gc_risk_factor
+pack: gc_remediations
 enabled: True
 description: remediate down devices
 runner_type: orquesta
