--- a/rules/risk_trigger.yaml
+++ b/rules/risk_trigger.yaml
@@ -1,8 +1,8 @@
 ---
-pack: gc_risk_factor
-ref: gc_risk_factor.risk_trigger
+pack: gc_remediations
+ref: gc_remediations.risk_trigger
 name: risk_trigger
-uid: rule:gc_risk_factor:risk_trigger
+uid: rule:gc_remediations:risk_trigger
 tags: []
 type:
   ref: standard
@@ -27,7 +27,7 @@ criteria:
     pattern: cross_margin_risk
     type: eq
 action:
-  ref: gc_risk_factor.remediate_risk
+  ref: gc_remediations.remediate_risk
   description: try to auto remediate risk value
   parameters:
     down_device: "{{ trigger.host }}"
