--- a/rules/nagios_trigger.yaml
+++ b/rules/nagios_trigger.yaml
@@ -18,7 +18,7 @@ context:
   user: st2admin
 criteria:
   trigger.state:
-    pattern: "^OK|WARNING$"
+    pattern: "^OK|WARNING|CRITICAL$"
     type: regex
   trigger.state_type:
     pattern: HARD
