--- a/actions/check_epoch.yaml
+++ b/actions/check_epoch.yaml
@@ -1,5 +1,5 @@
 ---
-name: check_risk
+name: check_epoch
 pack: gc_remediations
 enabled: True
 description: check freshness of stream data
@@ -8,7 +8,7 @@ entry_point: check_epoch.py
 parameters:
   down_device:
     type: string
-    description: hostname of network device to check
+    description: hostname of device
     required: True
     position: 0
   down_service:
