fix yml indents

--- a/actions/workflows/remediate_risk.yaml
+++ b/actions/workflows/remediate_risk.yaml
@@ -7,8 +7,8 @@ input:
 tasks:
   check_risk:
     action: gc_remediations.check_risk down_device=<% ctx(down_device) %>
-        retry:
-      when: <% result().return_code == 9 %>
+    retry:
+      when: <% result().exit_code == 9 %>
       count: 3
     next:
       - when: <% failed() %>
