try to retry all failed

--- a/actions/workflows/remediate_risk.yaml
+++ b/actions/workflows/remediate_risk.yaml
@@ -8,8 +8,9 @@ tasks:
   check_risk:
     action: gc_remediations.check_risk down_device=<% ctx(down_device) %>
     retry:
-      when: <% result().exit_code == 9 %>
+      when: <% failed() %>
       count: 3
+      delay: 3
     next:
       - when: <% failed() %>
         do: drain_prod
