--- a/actions/check_direction.yaml
+++ b/actions/check_direction.yaml
@@ -2,9 +2,9 @@
 name: check_direction
 pack: gc_remediations
 enabled: True
-description: check freshness of stream data
+description: check overall trend direction
 runner_type: python-script
-entry_point: check_epoch.py
+entry_point: check_direction.py
 parameters:
   direction:
     type: string
