try to rename var

--- a/actions/drain_env.yaml
+++ b/actions/drain_env.yaml
@@ -1,5 +1,6 @@
 ---
 name: drain_env
+pack: gc_remediations
 enabled: True
 description: drain env
 runner_type: python-script
@@ -10,7 +11,7 @@ parameters:
     description: device IP
     required: True
     position: 0
-  env:
+  environment:
     type: string
     description: env name
     required: True
