--- a/actions/orquesta-ask-basic.yaml
+++ b/actions/orquesta-ask-basic.yaml
@@ -4,3 +4,10 @@ description: A basic workflow that demonstrates inquiry.
 runner_type: orquesta
 entry_point: workflows/orquesta-ask-basic.yaml
 enabled: true
+parameters:
+  version:
+    type: string
+    description: version number to install
+    required: True
+    position: 0
+
