--- a/actions/workflows/remediate_rate.yaml
+++ b/actions/workflows/remediate_rate.yaml
@@ -14,7 +14,7 @@ tasks:
     next:
       - when: <% succeeded() %>
         publish:
-          - envronment: <% result().result.env %>
+          - environment: <% result().result.env %>
           - direction: <% result().result.direction %>
         do:
           - check_rate
