--- a/actions/workflows/remediate_rate.yaml
+++ b/actions/workflows/remediate_rate.yaml
@@ -23,7 +23,19 @@ tasks:
   check_rate:
     input:
       environment: <% ctx().environment %>
-      direction: <% ctx().direction %>
+       direction: <% ctx().direction %>
     action: gc_remediations.check_rate
+    next:
+      - when: <% succeeded() and result().result >= 1  %>
+        do:
+          - continue
+      - when: <% succeeded() and result().result <= 1  %>
+        do:
+          - nothing
+
   finish:
     action: core.echo message="all done!"
+  continue:
+    action: core.echo message="Need to remediate"
+  nothing:
+    action: core.echo message="nothing to see here"
