--- a/actions/workflows/remediate_rate.yaml
+++ b/actions/workflows/remediate_rate.yaml
@@ -28,14 +28,14 @@ tasks:
     next:
       - when: <% succeeded() and result().result >= 1  %>
         do:
-          - continue
+          - proceed
       - when: <% succeeded() and result().result <= 1  %>
         do:
           - nothing
 
   finish:
     action: core.echo message="all done!"
-  continue:
+  proceed:
     action: core.echo message="Need to remediate"
   nothing:
     action: core.echo message="nothing to see here"
