--- a/actions/workflows/remediate_rate.yaml
+++ b/actions/workflows/remediate_rate.yaml
@@ -25,11 +25,14 @@ tasks:
       environment: <% ctx().environment %>
       direction: <% ctx().direction %>
     action: gc_remediations.check_rate
+    publish:
+      - result_value <% result().result %>
     next:
       - when: <% succeeded() and result().result >= 1  %>
+      - when: <% ctx(result_value) > 0 %>
         do:
           - proceed
-      - when: <% succeeded() and result().result <= 1  %>
+      - when: <% ctx(result_value) < 0 %>
         do:
           - nothing
 
