--- a/actions/workflows/remediate_rate.yaml
+++ b/actions/workflows/remediate_rate.yaml
@@ -25,16 +25,17 @@ tasks:
       environment: <% ctx().environment %>
       direction: <% ctx().direction %>
     action: gc_remediations.check_rate
-    publish:
-      - result_value <% result().result %>
     next:
-      - when: <% succeeded() and result().result >= 1  %>
-      - when: <% ctx(result_value) > 0 %>
-        do:
-          - proceed
-      - when: <% ctx(result_value) < 0 %>
-        do:
-          - nothing
+      - when: <% succeeded() %>
+        publish:
+          - result_value: <% result().result %>
+  process_result:
+    - when: <% int(ctx().result_value) > 0  %>
+      do:
+        - proceed
+    - when: <% int(ctx().result_value) <  0  %>
+      do:
+        - nothing
 
   finish:
     action: core.echo message="all done!"
