--- a/rules/deploy_trigger.yaml
+++ b/rules/deploy_trigger.yaml
@@ -10,7 +10,7 @@ type:
 enabled: true
 
 trigger:
-        type: "gc_deploy"
+        type: "core.st2.webhook"
         parameters:
             url: "gc_deploy"
 
