--- a/rules/deploy_trigger.yaml
+++ b/rules/deploy_trigger.yaml
@@ -18,4 +18,4 @@ action:
   ref: "gc_remediations.deploy"
   description: run deployment workflow
   parameters:
-    version: "{{ trigger.version }}"
+    version: "{{ trigger.body.version }}"
