--- a/actions/workflows/deploy.yaml
+++ b/actions/workflows/deploy.yaml
@@ -32,18 +32,18 @@ tasks:
         do: stop
 
   deploy_dev:
-    action: core.local cmd="/opt/nagios_checks/check_nrpe -2 -t30 -H jenkins -c deploy_env -a dev <% ctx().version %>"
+    action: core.local cmd="/opt/nagios_checks/check_nrpe -2 -t30 -H conduit -c deploy_env -a dev <% ctx().version %>"
     next:
       - when: <% succeeded() %>
         do:
           - get_approval
 
   deploy_test:
-    action: core.local cmd="/opt/nagios_checks/check_nrpe -2 -t30 -H jenkins -c deploy_env -a test <% ctx().version %>"
+    action: core.local cmd="/opt/nagios_checks/check_nrpe -2 -t30 -H conduit -c deploy_env -a test <% ctx().version %>"
   deploy_stag:
-    action: core.local cmd="/opt/nagios_checks/check_nrpe -2 -t30 -H jenkins -c deploy_env -a stag <% ctx().version %>"
+    action: core.local cmd="/opt/nagios_checks/check_nrpe -2 -t30 -H conduit -c deploy_env -a stag <% ctx().version %>"
   deploy_config:
-    action: core.local cmd="/opt/nagios_checks/check_nrpe -2 -t30 -H jenkins -c deploy_env -a config <% ctx().version %>"
+    action: core.local cmd="/opt/nagios_checks/check_nrpe -2 -t30 -H conduit -c deploy_env -a config <% ctx().version %>"
 
   finish:
     action: core.echo message="Automation completed."
