single alert for rate change

--- a/rules/rate_change.yaml
+++ b/rules/rate_change.yaml
@@ -24,7 +24,7 @@ criteria:
     pattern: HARD
     type: eq
   trigger.service:
-    pattern: ".*_.*_rate"
+    pattern: ".*_rate"
     type: regex
 action:
   ref: gc_remediations.remediate_rate
